# dots-notifier

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  coverage.sh  dots-notifier.code-workspace  flake.nix  package-lock.json  package.json  rust-clippy-results.sarif
.github/workflows/: apisec-scan.yml  release-please.yml  rust-clippy.yml
.mcp/: DOTS_NOTIFIER_CONTEXT.md  README.md  claude-desktop.json  config.json  setup.sh  workspace.json
docs/: MCP_SECURITY.md  MCP_SETUP.md
modules/: notifier.nix
scripts/: test-mcp.sh
src/: cli.rs  dbus.rs  helper.rs  lib.rs  main.rs  notification.rs  proptests.rs  session.rs  types.rs
systemd/: dots-notifier-helper@.service
tests/: benchmarks.rs  integration_tests.rs  quickcheck_tests.rs
